@startuml

package donnees {

    class Modele {
            - final int NB_MAX_COLONNES = 5;

            + ajouterTache(col : Colonne, titre : String, description : String, duree : int, date : Date) : Tache
            + modifierTache(t : TacheComposite, titre : String, description : String, duree : int, date : Date) : boolean
            + ajouterSousTache(parent : TacheComposite, enfant : TacheComposite) : boolean
            + ajouterDependance(cible : TacheComposite, dep : TacheComposite) : boolean
            + notifier() : void


        }
        Modele ..|> Serializable
        Modele --> "*" Colonne : - colonnes

        Modele --> Archive : - archive

    abstract class TacheComposite {
        - String titre
        - String description
        - int duree
        - Date dateDebut

        + TacheComposite(String, String, int, Date)
        + void ajouterSousTache(TacheComposite)
        + void supprimerSousTache(TacheComposite)
        + List<TacheComposite> getSousTaches()
        + void setSousTaches(List<TacheComposite>)
        + boolean modifierTache(String, String, int, Date)
+ ajouterDependance(t : TacheComposite) : void
+ supprimerDependance(t : TacheComposite) : void
    }

    class Tache {
        + Tache(String, String, int, Date)
    }

    Tache --|> TacheComposite

    TacheComposite "1" --> "0..*" TacheComposite : sousTaches
        TacheComposite "1" --> "0..*" TacheComposite : dependances


    interface Serializable
    class Colonne {
    - String titre
    - static final long serialVersionUID = 1L
    + Colonne(String)
    + supprimeTache(TacheComposite) : void
    + ajouteTache((TacheComposite) : void

    }
    Colonne -->  "*" TacheComposite : - liste
    Colonne .u.|> Serializable
}

class Repository{
    - static String nomFichierSauvegarde
    - static Repository instance
    - Repository()
    + static getInstance() : Repository
    + saveAll(Modele m)
    + loadAll() : Modele
    + static creerFichier()
    + static supprimerFichier()
}

package vues{
    interface StrategieModeAffichage{
        genererAffichage(Modele m):void
    }

    interface Observateur{
        actualiser():void
    }

    class VueListes{
        - colonnes:Map<TacheComposite, String>

        + VueListes()
        + genererAffichage(List<Colonne>):void
    }

    class VueBureau{
        + VueBureau()
        +actualiser()
    }

    class VueTaches{
        + VueTaches(List<Colonne>)
        + actualiser():void
        + setModeAffichage(StrategieModeAffichage):void
    }
}

 class ControleurAjouterTache  {


    -  tfTitre : TextField;
    - taDescription : TextArea ;
    - spDuree : Spinner<Integer> ;
    - dpDateDebut : DatePicker ;

    - lvDependances: ListView<TacheComposite> ;
    - lvSousTaches : ListView<TacheComposite> ;

    + ControleurAjouterTache(Modele modele, Colonne colonneCourante, \n TextField tfTitre,TextArea taDescription, Spinner<Integer> spDuree, \n DatePicker dpDateDebut,ListView<TacheComposite> lvDependances, \n ListView<TacheComposite> lvSousTaches);

    + void handle(ActionEvent event);

}

class ControleurAjouterSousTache{
- modele : Modele
- cbParente : ComboBox<TacheComposite>
- cbSousTache : ComboBox<TacheComposite>
+ ControleurAjouterSousTache( modele : Modele\n,  cbParente : ComboBox<TacheComposite>, \n cbSousTache : ComboBox<TacheComposite>)
+ handle(event : ActionEvent) : void
}

ControleurAjouterSousTache --> Modele : modele



 ControleurAjouterTache --> Modele : - modele
 ControleurAjouterTache --> Colonne : -colonneCourante


VueListes ..|> StrategieModeAffichage
VueBureau ..|> StrategieModeAffichage
VueTaches ..|> Observateur

VueTaches --> "1" StrategieModeAffichage
VueTaches --> "*" Colonne
Modele --> Observateur : - ArrayList observateurs
StrategieModeAffichage .|> Observateur


@enduml
